option go_package = "../identity";

// The request message containing the user's name.
message LoginRequest {
    required string email = 1;
    required string password = 2;
}

// The response message containing the greetings
message LoginResponse {
    required int32 status = 1;
    optional string access_token = 2;
    optional string expiry = 3;
    optional string token_type = 4;
    optional string last_refresh = 5;
    optional int32 token_ttl = 6;
}
message UserRequest{
    // Empty - authentication comes from gRPC metadata
}

message UserResponse{
   required string ID = 1;
   required string email=2;
   required string name=3;
   optional bool emailVerified = 4;
}
// The Identity service definition.
service Identity {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Me(UserRequest) returns (UserResponse);
}